--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,41 +9,44 @@
 
   <div class="keys">
     <div data-key="65" class="key">
-      <kbd>A</kbd>
-      <span class="sound">clap</span>
+      <button >
+        <kbd data-key="65" >A</kbd>
+        <span class="sound">clap</span>
+      </button>
     </div>
-    <div data-key="83" class="key">
+    <button data-key="83" class="key">
       <kbd>S</kbd>
       <span class="sound">hihat</span>
-    </div>
-    <div data-key="68" class="key">
+    </button>
+    <button data-key="68" class="key">
       <kbd>D</kbd>
       <span class="sound">kick</span>
-    </div>
-    <div data-key="70" class="key">
+    </button>
+    <button data-key="70" class="key">
       <kbd>F</kbd>
       <span class="sound">openhat</span>
-    </div>
-    <div data-key="71" class="key">
+    </button>
+    <button data-key="71" class="key">
       <kbd>G</kbd>
       <span class="sound">boom</span>
-    </div>
-    <div data-key="72" class="key">
+    </button>
+    <button data-key="72" class="key">
       <kbd>H</kbd>
       <span class="sound">ride</span>
-    </div>
-    <div data-key="74" class="key">
+    </button>
+    <button data-key="74" class="key">
       <kbd>J</kbd>
       <span class="sound">snare</span>
-    </div>
-    <div data-key="75" class="key">
+    </button>
+    <button data-key="75" class="key">
+      <div></div>
       <kbd>K</kbd>
       <span class="sound">tom</span>
-    </div>
-    <div data-key="76" class="key">
+    </button>
+    <button data-key="76" class="key">
       <kbd>L</kbd>
       <span class="sound">tink</span>
-    </div>
+    </button>
   </div>
 
   <audio data-key="65" src="sounds/clap.wav"></audio>
@@ -59,23 +62,38 @@
 
   <script>
 
-  function playSound(e){
-    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
-    if(!audio) return;// stop the dunction from running all together
-    audio.currentTime = 0; //rewind to the start
-    audio.play();
-    key.classList.add('playing');
-  }
+  document.addEventListener("DOMContentLoaded", function(event) {
+    var key = document.querySelector('.key');
 
-  function removeTransition(e) {
-    if(e.propertyName !== 'transform') return;
-    this.classList.remove('playing');
-  }
+    function playSound(e){
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+      const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+      if(!audio) return;// stop the dunction from running all together
+      audio.currentTime = 0; //rewind to the start
+      audio.play();
+      key.classList.add('playing');
+    }
 
-  const keys = document.querySelectorAll('.key');
-  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-  window.addEventListener('keydown', playSound);
+    function playClickSound(e){
+      const audio = document.querySelector(`audio[data-key="${e.srcElement.attributes[0].value}"]`);
+      const key = document.querySelector(`.key[data-key="${e.srcElement.attributes[0].value}"]`);
+      if(!audio) return;// stop the dunction from running all together
+      audio.currentTime = 0; //rewind to the start
+      audio.play();
+      key.classList.add('playing');
+    }
+
+    function removeTransition(e) {
+      if(e.propertyName !== 'transform') return;
+      this.classList.remove('playing');
+    }
+
+    const keys = document.querySelectorAll('.key');
+    keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+    key.addEventListener('touchstart', playClickSound);
+    window.addEventListener('keydown', playSound);
+
+  });
 
 </script>
 </body>
