some style changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,12 +8,10 @@
 <body>
 
   <div class="keys">
-    <div data-key="65" class="key">
-      <button >
-        <kbd data-key="65" >A</kbd>
-        <span class="sound">clap</span>
-      </button>
-    </div>
+    <button data-key="65" class="key">
+      <kbd>A</kbd>
+      <span class="sound">clap</span>
+    </button>
     <button data-key="83" class="key">
       <kbd>S</kbd>
       <span class="sound">hihat</span>
