--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+  <meta charset="UTF-8">
   <title>Rainy Day Drums</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -93,6 +94,25 @@
     window.addEventListener('keydown', playSound);
 
   });
+
+  (function($) {
+    var IS_IOS = /iphone|ipad/i.test(navigator.userAgent);
+    $.fn.nodoubletapzoom = function() {
+      if (IS_IOS)
+        $(this).bind('touchstart', function preventZoom(e) {
+          var t2 = e.timeStamp
+            , t1 = $(this).data('lastTouch') || t2
+            , dt = t2 - t1
+            , fingers = e.originalEvent.touches.length;
+          $(this).data('lastTouch', t2);
+          if (!dt || dt > 500 || fingers > 1) return; // not double-tap
+
+          e.preventDefault(); // double tap - prevent the zoom
+          // also synthesize click events we just swallowed up
+          $(this).trigger('click').trigger('click');
+        });
+    };
+  })(jQuery);
 
 </script>
 </body>
