--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,7 +89,7 @@
 
     const keys = document.querySelectorAll('.key');
     keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-    keys.forEach(key => key.addEventListener('click', playClickSound));
+    keys.forEach(key => key.addEventListener('touchstart', playClickSound));
     window.addEventListener('keydown', playSound);
 
   });
